:bug: (visibility) Now you see me, now you don't!important

--- a/src/content/visibility.less
+++ b/src/content/visibility.less
@@ -31,7 +31,7 @@ each(@breakpoints, .(@bk, @_k, @_i) {
 
     @media @@var {
         .hidden-@{bk} {
-            display: none;
+            display: none!important;
         }
 
         .visible-@{bk} {
